working on dapp

--- a/DApp/index.html
+++ b/DApp/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web3.js MetaMask PUF</title>
+  <title>Arduino-NFT-PUF</title>
   <!-- import Web3.js -->
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js"></script>
@@ -110,7 +110,7 @@
 
 <body>
 
-<h1>Web3.js MetaMask PUF</h1>
+<h1>Arduino-NFT-PUF</h1>
 
 <!-- Provider and current account display -->
 <div class="container">
@@ -468,6 +468,21 @@
   </div>
 `;
       return;
+    }
+
+    try {
+      const eventualOwner = await contract.methods.ownerOfDevice(hashedPUF).call();
+      console.log("the nft already exists!");
+      document.getElementById('transactionResult').innerHTML = `
+  <div style="background-color: #f8d7da; padding: 15px; border-radius: 8px; border: 1px solid #f5c6cb; color: #721c24;">
+    <strong>Error: this PUF has already been minted!</strong>
+  </div>
+`;
+
+      return;
+    }
+    catch (error) {
+      console.log("the nft does not exist.");
     }
 
     try {
